# filler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  cyuriko.filler  filler.h  filler.trace  free_things.c  main.c  notes.txt  sleonia.txt  transform_to_heat.c
includes/: define_value.h  filler.h  functions.h  structs.h
libft/: .gitignore  Makefile
libft/Makefiles/: memory.mk  string.mk  vector.mk
libft/includes/: ft_memory.h  ft_vector.h  libft.h
libft/source/memory/: ft_destroy_int_arr.c  ft_destroy_string_arr.c  ft_memalloc.c  ft_safe_malloc.c
libft/source/string/: ft_atof.c  read_big_file.c
resources/maps/: map00  map01  map_test  map_test_2
sources/: count_heat.c  count_heatmap.c  cropped_map.c  free_things.c  ft_free.c  ft_get_line.c  init.c  main.c  math_best_pos.c  math_heatmap.c  parse_piece.c  parse_plateau.c  parse_player.c  put_piece.c  read_map.c  service.c  shift_x.c  skip_line.c  transform_to_heat.c  utilits.c  work_with_heatmap.c
visualization/: Makefile  vs
visualization/includes/: vs_define_value.h  vs_filler.h  vs_functions.h  vs_structs.h
visualization/sources/: calc_size.c  change_music.c  events.c  ft_exit.c  init.c  init_sdl.c  main.c  main_loop.c  music_manager.c  parse.c  render.c  sdl_loop.c
