cmake_minimum_required(VERSION 3.15)
project(filler C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(includes)
include_directories(libft/includes)

add_executable(filler
        includes/filler.h
        libft/includes/ft_error.h
        libft/includes/ft_get_next_line.h
        libft/includes/ft_io.h
        libft/includes/ft_memory.h
        libft/includes/ft_my_string.h
        libft/includes/ft_sort.h
        libft/includes/ft_string.h
        libft/includes/ft_vector.h
        libft/includes/libft.h
        libft/source/error/char_error.c
        libft/source/error/ft_exit.c
        libft/source/error/int_error.c
        libft/source/error/malloc_error.c
        libft/source/error/void_error.c
        libft/source/io/ft_putchar.c
        libft/source/io/ft_putchar_fd.c
        libft/source/io/ft_putendl.c
        libft/source/io/ft_putendl_fd.c
        libft/source/io/ft_putnbr.c
        libft/source/io/ft_putnbr_fd.c
        libft/source/io/ft_putstr.c
        libft/source/io/ft_putstr_fd.c
        libft/source/io/print_arr_str.c
        libft/source/io/putchar_color.c
        libft/source/io/putstr_color.c
        libft/source/memory/ft_bzero.c
        libft/source/memory/ft_destroy_int_arr.c
        libft/source/memory/ft_destroy_string_arr.c
        libft/source/memory/ft_memalloc.c
        libft/source/memory/ft_memccpy.c
        libft/source/memory/ft_memchr.c
        libft/source/memory/ft_memcmp.c
        libft/source/memory/ft_memcpy.c
        libft/source/memory/ft_memdel.c
        libft/source/memory/ft_memmove.c
        libft/source/memory/ft_memset.c
        libft/source/memory/ft_safe_malloc.c
        libft/source/sort/my_bubble_sort.c
        libft/source/sort/my_quick_sort.c
        libft/source/string/ft_atof.c
        libft/source/string/ft_atoi.c
        libft/source/string/ft_atoi_base.c
        libft/source/string/ft_find_symb_in_str_arr.c
        libft/source/string/ft_getnbr.c
        libft/source/string/ft_isalnum.c
        libft/source/string/ft_isalpha.c
        libft/source/string/ft_isascii.c
        libft/source/string/ft_isdigit.c
        libft/source/string/ft_isnumber.c
        libft/source/string/ft_isprint.c
        libft/source/string/ft_itoa.c
        libft/source/string/ft_len_arr.c
        libft/source/string/ft_strcat.c
        libft/source/string/ft_strchr.c
        libft/source/string/ft_strchrdup.c
        libft/source/string/ft_strcmp.c
        libft/source/string/ft_strcpy.c
        libft/source/string/ft_strdel.c
        libft/source/string/ft_strdup.c
        libft/source/string/ft_strequ.c
        libft/source/string/ft_striter.c
        libft/source/string/ft_striteri.c
        libft/source/string/ft_strjoin.c
        libft/source/string/ft_strjoin_free.c
        libft/source/string/ft_strlcat.c
        libft/source/string/ft_strlen.c
        libft/source/string/ft_strlow.c
        libft/source/string/ft_strmap.c
        libft/source/string/ft_strmapi.c
        libft/source/string/ft_strncat.c
        libft/source/string/ft_strncmp.c
        libft/source/string/ft_strncpy.c
        libft/source/string/ft_strnequ.c
        libft/source/string/ft_strnew.c
        libft/source/string/ft_strnstr.c
        libft/source/string/ft_strrchr.c
        libft/source/string/ft_strrev.c
        libft/source/string/ft_strsplit.c
        libft/source/string/ft_strstr.c
        libft/source/string/ft_strsub.c
        libft/source/string/ft_strtrim.c
        libft/source/string/ft_strup.c
        libft/source/string/ft_tolower.c
        libft/source/string/ft_toupper.c
        libft/source/string/get_next_line.c
        libft/source/string/read_big_file.c
        libft/source/string/read_file.c
        libft/source/vector/ft_vec_distance.c
        libft/source/vector/ft_vec_dot.c
        libft/source/vector/ft_vec_length.c
        libft/source/vector/ft_vec_multiplication.c
        libft/source/vector/ft_vec_multiplication_num.c
        libft/source/vector/ft_vec_subtract.c
        libft/source/vector/ft_vec_sum.c
        sources/count_heatmap.c
        sources/cropped_map.c
        sources/free_things.c
        sources/ft_free.c
        sources/ft_get_line.c
        sources/init.c
        sources/main.c
        sources/parse_piece.c
        sources/parse_player.c
        sources/put_piece.c
        sources/read_map.c
        sources/skip_line.c
        sources/work_with_heatmap.c
        free_things.c
        main.c
        service.c
        transform_to_heat.c)
